feat: add localization

--- a/i18n/en/docusaurus-plugin-content-docs/current/test/test.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/test/test.mdx
@@ -9,8 +9,7 @@ import Tooltip from '@site/src/components/Tooltip/Tooltip.jsx';
 import RefModal from '@site/src/components/modals/RefModal';
 
 
-
-# дефолтный текст 
+# дефолтный текст ENGLISH
 
 Пример тултипа <Tooltip tooltip='или экраны'>страницы</Tooltip> и управлять ими. 
 
